# eda202320_tarea_3

./: CMakeLists.txt  README.md
include/infix/: infixToPostfix.hpp
include/trees/: tree.hpp  treeNode.hpp
src/: infixToPostfix.cpp  tree.cpp  treeNode.cpp
tests/: tarea_4.cpp  tarea_v1.cpp  tarea_v2.cpp
